--- a/public/index.html
+++ b/public/index.html
@@ -321,7 +321,7 @@
           </div>
         </a>
 
-        <a href="/spl-blog" class="feature-card-link">
+        <a href="/spl" class="feature-card-link">
           <div class="feature-card">
             <div class="feature-badge">Youth Led</div>
             <h3 class="feature-title">SPL Blog</h3>
