--- a/public/accountinfo/index.html
+++ b/public/accountinfo/index.html
@@ -192,9 +192,10 @@
       <a href="/home">Home</a>
       <a href="/calendar">Calendar</a>
       <a href="/documents">Documents</a>
+      <a href="/scoutmaster">SM Blog</a>
+      <a href="/spl">SPL Blog</a>
       <a href="/events">Events</a>
       <a href="/mail">Mail</a>
-      <a href="/account">Account</a>
     </nav>
 
     <div id="auth-bar">
@@ -240,12 +241,6 @@
       <button id="saveBtn" class="btn" type="button">Save Changes</button>
       <div id="saveMsg" class="msg"></div>
     </section>
-
-    <section>
-      <h2 style="margin:0 0 8px; font-size:18px;">Change Email (optional)</h2>
-      <p class="muted" style="margin:0 0 8px;">
-        This changes the Firebase sign-in email. You’ll need your password again for security.
-      </p>
 
       <div class="row">
         <div>
