--- a/public/accountinfo/index.html
+++ b/public/accountinfo/index.html
@@ -195,6 +195,7 @@
       <a href="/documents">Documents</a>
       <a href="/scoutmaster">SM Blog</a>
       <a href="/spl">SPL Blog</a>
+      <a href="/useful-links">Useful Links</a>
       <a href="/events">Events</a>
       <a href="/mail">Mail</a>
     </nav>
