--- a/public/home/index.html
+++ b/public/home/index.html
@@ -286,6 +286,7 @@
   }
 
   #auth-info {
+    color: #000000;
     max-width: 140px;          /* adjust to taste */
     overflow: hidden;
     text-overflow: ellipsis;
@@ -420,13 +421,6 @@
             </p>
           </div>
         </a>
-
-        <a href="/accountinfo" class="feature-card-link">
-          <div class="feature-card">
-            <div class="feature-badge">Your Account</div>
-            <h3 class="feature-title">Account Info</h3>
-            <p class="feature-text">
-              View and edit account info.
             </p>
           </div>
         </a>
