--- a/public/home/index.html
+++ b/public/home/index.html
@@ -22,8 +22,7 @@
 
     body {
       margin: 0;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-        sans-serif;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       background: #d2cab6;
       color: var(--text-main);
       min-height: 100vh;
@@ -72,6 +71,7 @@
       gap: 12px;
       font-size: 13px;
       text-transform: uppercase;
+      flex-wrap: wrap;
     }
 
     nav a {
@@ -149,6 +149,7 @@
       color: var(--text-muted);
       text-transform: uppercase;
       letter-spacing: 0.07em;
+      white-space: nowrap;
     }
 
     .badge.admin {
@@ -188,9 +189,7 @@
     }
 
     @media (max-width: 720px) {
-      .grid {
-        grid-template-columns: minmax(0, 1fr);
-      }
+      .grid { grid-template-columns: minmax(0, 1fr); }
     }
 
     .feature-card-link {
@@ -252,7 +251,6 @@
       nav {
         width: 100%;
         justify-content: flex-start;
-        flex-wrap: wrap;
       }
       .welcome-card {
         flex-direction: column;
@@ -261,6 +259,7 @@
     }
   </style>
 </head>
+
 <body>
   <header>
     <div>
@@ -280,7 +279,7 @@
     </nav>
 
     <div id="auth-bar">
-      <button id="logout-btn">Log Out</button>
+      <button id="logout-btn" type="button">Log Out</button>
     </div>
   </header>
 
@@ -300,6 +299,7 @@
 
     <section>
       <h2>Troop Resources</h2>
+
       <div class="grid">
         <a href="/calendar" class="feature-card-link">
           <div class="feature-card">
@@ -390,16 +390,8 @@
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import {
-      getAuth,
-      onAuthStateChanged,
-      signOut
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-    import {
-      getFirestore,
-      doc,
-      getDoc
-    } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
+    import { getAuth, onAuthStateChanged, signOut } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+    import { getFirestore, doc, getDoc } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore.js";
 
     const firebaseConfig = {
       apiKey: "AIzaSyD5qUHa2JuQ3iI7U3DrX7JDyhx76PGzhxM",
@@ -417,20 +409,36 @@
 
     const logoutBtn = document.getElementById("logout-btn");
     const roleBadgeContainer = document.getElementById("role-badge-container");
-    const authInfoEl = document.getElementById("auth-info");
+    const welcomeTitleEl = document.getElementById("welcome-title");
 
     let currentUser = null;
     let currentIsAdmin = false;
 
-    function updateUI() {
-  if (currentUser) {
-    roleBadgeContainer.innerHTML = `
-      <span class="badge ${currentIsAdmin ? "admin" : ""}">
-        ${currentIsAdmin ? "Admin" : "Viewer"}
-      </span>
-    `;
-  }
-}
+    function cleanName(str) {
+      return (str || "").trim();
+    }
+
+    function buildDisplayName(info, user) {
+      const full = cleanName(info?.fullName);
+      if (full) return full;
+
+      const first = cleanName(info?.firstName);
+      const last = cleanName(info?.lastName);
+      const combo = cleanName((first + " " + last).trim());
+      if (combo) return combo;
+
+      return user?.email || user?.uid || "Member";
+    }
+
+    function updateUI(displayName) {
+      welcomeTitleEl.textContent = `Welcome, ${displayName}`;
+
+      roleBadgeContainer.innerHTML = `
+        <span class="badge ${currentIsAdmin ? "admin" : ""}">
+          ${currentIsAdmin ? "Admin" : "Viewer"}
+        </span>
+      `;
+    }
 
     async function handleAuth(user) {
       if (!user) {
@@ -446,12 +454,8 @@
         return;
       }
 
-      const data = infoSnap.data();
+      const data = infoSnap.data() || {};
       const role = data.authRole;
-      
-      if (data.fullName && data.fullName.trim()) {
-  welcomeTitleEl.textContent = "Welcome, " + data.fullName.trim();
-}
 
       if (role !== "admin" && role !== "viewer") {
         window.location.href = "/under-review/";
@@ -460,7 +464,9 @@
 
       currentUser = user;
       currentIsAdmin = role === "admin";
-      updateUI();
+
+      const displayName = buildDisplayName(data, user);
+      updateUI(displayName);
     }
 
     onAuthStateChanged(auth, handleAuth);
