--- a/public/home/index.html
+++ b/public/home/index.html
@@ -277,6 +277,9 @@
       <a href="/events">Events</a>
       <a href="/mail">Mail</a>
     </nav>
+
+    <div id="auth-bar">
+    </div>
   </header>
 
   <main>
